<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_back"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/task_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="Insert name here"
        android:hint="@string/insert_name_here"
        android:inputType="text"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/harddl"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/hard_deadline"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/task_harddl_edit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/task_name_edit"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="no"
        android:hint="@string/insert_hard_dl_here_in_days"
        android:inputType="text"
        android:textSize="15sp" />
    <DatePicker
        android:id="@+id/start_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="true"
        android:spinnersShown="false"
        android:visibility="gone" />
    <Button
        android:id="@+id/start_date_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_date_picker"
        android:text="@string/ok"
        android:visibility="gone" />
    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/harddl"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/start_date"
        android:textSize="15sp" />
    <Button
        android:id="@+id/task_start_date_edit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/harddl"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/press_to_select_start_date"
        android:textSize="15sp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_date"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel" />
    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_date"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/done" />
    <RelativeLayout
        android:id="@+id/loadingPanelEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</RelativeLayout>
